# Raid

./: CMakeLists.txt  run.bat
Agent/: main.c
Agent/MessageHandlers/GeneralInfoRequest/: GeneralInfoRequest.c  GeneralInfoRequest.h
Agent/RaidAgent/: RaidAgent.c  RaidAgent.h
Common/: Log.h  Typedefs.h
Common/Communication/RaidProtocol/: MessageStructures.h  RaidProtocol.c  RaidProtocol.h
Common/Communication/Socket/: Socket.c  Socket.h
Common/MessageHandler/: MessageHandler.c  MessageHandler.h
Station/: main.c
Station/CommandHandler/: Command.h  CommandHandler.c  CommandHandler.h  CommandHandlers.c  CommandHandlers.h  GeneralInfoRequest.h
Station/CommandManager/: CommandManager.c  CommandManager.h
Station/CommandParser/: Command.h  CommandParser.c  CommandParser.h
Station/MessageHandlers/GeneralInfoResponse/: GeneralInfoResponse.c  GeneralInfoResponse.h
Station/RaidStation/: RaidStation.c  RaidStation.h
